# nordigen-python

./: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  renovate.json  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: all-test.yaml  ci.yaml  master.yaml  pr.yaml  pypi-publish.yaml
examples/: link-accounts.py  simple.py
nordigen/: __init__.py  client.py  oauth.py
tests/: __init__.py  test_account.py  test_agreements.py  test_aspsps.py  test_auth.py  test_base.py  test_client_wrapper.py  test_institutions.py  test_integration.py  test_oauth.py  test_premium.py  test_requisitions.py
