[metadata]
description-file = README.md

[tool:pytest]
addopts = --cov=nordigen/ --cov-fail-under=100 --cov-report xml --cov-report html --cov-report term-missing --junitxml=pytest-report.xml

[coverage:report]
fail_under = 100
skip_covered = True

[coverage:run]
relative_files=True

[isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=120
known_first_party=nordigen,tests
no_lines_before=STDLIB,LOCALFOLDER
default_section=THIRDPARTY

[flake8]
max_line_length = 120
max_complexity = 5
ignore = D100,D101,D102,D103,D104